--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="title">Hello World</h1>
         <h1 class="title">Hello World</h1>
         <h1 class="title">Hello World</h1>
-        <a href="https://www.tahseen.com.au" target="_blank">Click to go to my special link</a>
+        <a href="https://www.google.com.au" target="_blank">Click to go to my special link</a>
     </header>
     <main>
         <p>Hello My name is FakeRayBanz and I am a C# developer</p>
