Changed colours and styling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1 class="title">Hello World</h1>
         <h1 class="title">Hello World</h1>
         <h1 class="title">Hello World</h1>
-        <a href="https://www.google.com.au" target="_blank">Click to go to my special link</a>
+        <a id="testLink" href="https://www.google.com.au" target="_blank">Click to go to my link</a>
     </header>
     <main>
-        <p>Hello My name is FakeRayBanz and I am a C# developer</p>
+        <p>Hello My name is FakeRayBanz and I am new javascript developer</p>
         <button id="button">Click to open message</button>
     </main>
 </body>
