--- a/about.html
+++ b/about.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matthew Parker Portfolio</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./index.js"></script>
 
 </head>
 <body>
@@ -23,9 +22,7 @@
     </div>
     
     <main>
-        <p>Hello My name is FakeRayBanz and I am new javascript developer</p>
-        <button id="button">Click to open message</button>
-        <a id="testLink" href="https://www.google.com.au" target="_blank">Click to go to my link</a>
+        <p>About me</p>
     </main>
 </body>
 </html>
